--- a/index.html
+++ b/index.html
@@ -567,10 +567,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://gcsetuition.github.io/GCSE-Tuition-in-Kent/">https://gcsetuition.github.io/GCSE-Tuition-in-Kent/</a><br>
+                <a target="_bLank" href="https://gcsetuitionltd.s3.us-east-005.backblazeb2.com/GCSE+Tuition+in+Kent/index.html">https://gcsetuitionltd.s3.us-east-005.backblazeb2.com/GCSE+Tuition+in+Kent/index.html</a><br>
+                <a target="_bLank" href="https://gcse-tuition-in-kent1-git-main-gcsetuitions-projects.vercel.app/">https://gcse-tuition-in-kent1-git-main-gcsetuitions-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://quiet-frangipane-71d3f9.netlify.app">https://quiet-frangipane-71d3f9.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
